#263 - clean up deprecation warnings